# PodcastPal

./: .replit  README.md  app.py  cache_manager.py  complete_database_export.sql  connection_manager.py  database_export.sql  database_optimizer.py  database_ping.py  db_monitor.py  extended_cache.py  feed_details.html  feed_generator.py  google_auth.py  main.py  models.py  pyproject.toml  query_optimizer.py  replit.md  routes.py  session_manager.py  start_server.sh  test_url.py  utils.py
attached_assets/: Drucker PP August - New Testament Feb 2nd Half.csv_1754489703772.csv  June Tozer PPa.csv  Pasted-1-Understand-the-Root-Cause-What-is-the-redirect-uri-It-s-the-URL-that-Google-redirects-users-to-a-1737246582853.txt  Pasted-2025-05-18-16-25-34-67-2db75449-User-INFO-werkzeug-127-0-0-1-18-May-2025-23-25-34-GET-feed-d-1747611163724.txt  Pasted-2025-06-04-15-57-51-06-f2877e87-User-TypeError-object-of-type-AppenderQuery-has-no-len-2025-06--1749096440957_1749096440957.txt  Pasted-2025-06-24-06-39-34-83-98e1eced-User-2025-06-24-06-39-34-83-98e1eced-User-This-typically-means-that--1750775404173_1750775404174.txt  Pasted-ArgumentError-sqlalchemy-exc-ArgumentError-Textual-SQL-expression-SET-SESSION-statement-tim-sh-1750775415066_1750775415066.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-dropbox-traffic-1753670605541_1753670605541.txt  Pasted-NameError-NameError-name-unicode-is-not-defined-Traceback-most-recent-call-last-File-home-ru-1737237877252.txt  Tozer PP August - New Testament Feb 2nd Half.csv_1754490190596.csv  (+15 more)
(+11 files in other folders)
