[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask==3.1.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "jinja2==3.1.6",
    "oauthlib>=3.2.2",
    "psycopg2-binary>=2.9.10",
    "python-slugify>=8.0.4",
    "pytz>=2025.1",
    "requests==2.32.4",
    "slugify>=0.0.1",
    "sqlalchemy>=2.0.37",
    "text-unidecode>=1.3",
    "trafilatura>=2.0.0",
    "urllib3==2.6.3",
    "werkzeug==3.1.5",
]
